Use requireNonNullElse instead of firstNonNull